# TrageOgreTrade

./: .gitignore  CMakeLists.txt  README.md  main.cpp
json_format_examples/: get_balance.json  get_balances.json  get_order.json  get_order_book.json  get_orders.json  get_ticker.json  get_trade_history.json  list_markets.json  orders_market.json  submit_sell_order.json
lib/: Data.cpp  Data.h  DataHolder.h  Trader.cpp  Trader.h  httpApi.h
nlohmann/: json.hpp
